Add message__image css

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -60,6 +60,10 @@
       color: $chatTextColor;
       padding-top: 10px;
     }
+    &__image {
+      max-width: 300px;
+      height: auto;
+    }
   }
 }
 
