Create addMessageToChatArea method
chatの投稿をメソッド化
チャットを表示する際に重複して表示されるのを防ぐため、idのチェックを導入。
リファクタリングを若干実施

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -60,7 +60,7 @@
       color: $chatTextColor;
       padding-top: 10px;
     }
-    &__image {
+    &__image__img {
       max-width: 300px;
       height: auto;
     }
