--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -6,8 +6,8 @@
       = message.strp_created_at
   .message__bottom.clearfix
     - if message.content.present?
-      %p.message__content
-        = message.content
+      .message__content
+        %p= message.content
     - if message.image.present?
       .message__image
-        = image_tag message.image.to_s, class: 'message__image'
+        = image_tag message.image.url, class: 'message__image__img'
